[package]
name = "irgen"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "create IR files to enahnce the signal of an acoustic instrument pickups."
homepage = "https://github.com/laenzlinger/irgen"
repository = "https://github.com/laenzlinger/irgen"
readme = "README.md"
exclude = [
    "tests/data/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rustfft = "6.1.0"
hound = "3.5.0"
apodize = "1.0.0"
clap = { version = "4.0.32", features = ["derive"] }
